--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MentalQ</string>
+
     <string name="onboarding_skip">Skip</string>
     <string name="onboarding_next">Next</string>
     <string name="onboarding_get_started">Get Started</string>
@@ -9,6 +10,29 @@
     <string name="onboarding_page2_description">Understand your patterns and receive personalized recommendations</string>
     <string name="onboarding_page3_title">Join Community</string>
     <string name="onboarding_page3_description">Connect with others and share your journey in a safe, supportive environment</string>
+
+    <string name="welcome_back">Welcome Back</string>
+    <string name="create_account">Create Account</string>
+    <string name="label_name">Name</string>
+    <string name="label_email">Email</string>
+    <string name="label_password">Password</string>
+    <string name="button_login">Login</string>
+    <string name="button_register">Register</string>
+    <string name="text_no_account">Don\'t have an account? Register</string>
+    <string name="text_have_account">Already have an account? Login</string>
+    <string name="error_email_empty">Email cannot be empty</string>
+    <string name="error_email_invalid">Invalid email format</string>
+    <string name="error_password_empty">Password cannot be empty</string>
+    <string name="error_password_length">Password must be at least 8 characters</string>
+    <string name="error_name_empty">Name cannot be empty</string>
+    <string name="login_subtitle">Welcome back! Please sign in to continue</string>
+    <string name="register_subtitle">Create an account to get started</string>
+    <string name="text_no_account_prefix">Don\'t have an account?</string>
+    <string name="text_have_account_prefix">Already have an account?</string>
+    <string name="text_no_account_action">Sign up</string>
+    <string name="text_have_account_action">Sign in</string>
+    <string name="show_password">Show password</string>
+    <string name="hide_password">Hide password</string>
 <!--    <string name="welcome">Welcome</string>-->
 <!--    <string name="get_started">Let\'s get started!</string>-->
 <!--    <string name="login">Login</string>-->
