--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="mental_health_matters">Mental health matters!</string>
     <string name="your_note">Your Note</string>
     <string name="your_profile">Your Profile</string>
+    <string name="preferences">Preferences</string>
     <!--    <string name="welcome">Welcome</string>-->
 <!--    <string name="get_started">Let\'s get started!</string>-->
 <!--    <string name="login">Login</string>-->
