--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="your_note">Your Note</string>
     <string name="your_profile">Your Profile</string>
     <string name="preferences">Preferences</string>
+    <string name="how_do_you_feel">How are you feeling in this moment?</string>
     <!--    <string name="welcome">Welcome</string>-->
 <!--    <string name="get_started">Let\'s get started!</string>-->
 <!--    <string name="login">Login</string>-->
