EDIT PROFILE DONE ARGHHHHHHHHHHHHHHHHHHHHHHHHHHH

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,18 @@
     <string name="streak_notification_title">Maintain Your Streak!</string>
     <string name="streak_notification_content_1">You\'re on a</string>
     <string name="streak_notification_content_2">-day streak! Log your entry today.</string>
+    <string name="login_failed">Login failed!</string>
+    <string name="register_failed">Register failed, please check your input and try again.</string>
+    <string name="login_success">Login success!</string>
+    <string name="register_success">Register success, please check your email to verify and activate your account!</string>
+    <string name="delete">Delete</string>
+    <string name="edit_profile">Edit profile</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
+    <string name="save">Save</string>
+    <string name="confirm_email_update_title">Confirm Email Update</string>
+    <string name="update_email_confirmation_message_1">"Updating your email will log you out. A verification link will be sent to "</string>
+    <string name="update_email_confirmation_message_2">" Are you sure you want to continue?"</string>
     <!--    <string name="welcome">Welcome</string>-->
     <!--    <string name="get_started">Let\'s get started!</string>-->
     <!--    <string name="login">Login</string>-->
