--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,9 @@
     <string name="confirm_email_update_title">Confirm Email Update</string>
     <string name="update_email_confirmation_message_1">"Updating your email will log you out. A verification link will be sent to "</string>
     <string name="update_email_confirmation_message_2">" Are you sure you want to continue?"</string>
+    <string name="creating_note">Creating new note…</string>
+    <string name="updating_note">Updating your note…</string>
+    <string name="no_notes">No notes available</string>
     <!--    <string name="welcome">Welcome</string>-->
     <!--    <string name="get_started">Let\'s get started!</string>-->
     <!--    <string name="login">Login</string>-->
