--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,25 @@
     <string name="creating_note">Creating new note…</string>
     <string name="updating_note">Updating your note…</string>
     <string name="no_notes">No notes available</string>
+    <string name="forgot_password">Forgot password?</string>
+    <string name="error_password_match">Password not match</string>
+    <string name="update_password_success">Your password updated successfully!</string>
+    <string name="error_password_uppercase">Password must contain uppercase characters</string>
+    <string name="error_password_digit">Password must contain number</string>
+    <string name="error_occurred">An error occurred</string>
+    <string name="forgot_password_button">Forgot Password</string>
+    <string name="forgot_password_title">Forgot Password</string>
+    <string name="forgot_password_subtitle">Enter your email address to receive a verification code</string>
+    <string name="send_verification_code">Send Verification Code</string>
+    <string name="otp_step_title">Enter Verification Code</string>
+    <string name="otp_step_subtitle">Enter the 6-digit code sent to your email</string>
+    <string name="verification_code">Verification Code</string>
+    <string name="verify_code">Verify Code</string>
+    <string name="new_password_step_title">Reset Password</string>
+    <string name="new_password_step_subtitle">Enter your new password</string>
+    <string name="new_password">New Password</string>
+    <string name="confirm_email">Confirm Password</string>
+    <string name="reset_password">Reset Password</string>
     <!--    <string name="welcome">Welcome</string>-->
     <!--    <string name="get_started">Let\'s get started!</string>-->
     <!--    <string name="login">Login</string>-->
