--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="new_password">New Password</string>
     <string name="confirm_email">Confirm Password</string>
     <string name="reset_password">Reset Password</string>
+    <string name="note_not_sufficient">Notes are not sufficient</string>
     <!--    <string name="welcome">Welcome</string>-->
     <!--    <string name="get_started">Let\'s get started!</string>-->
     <!--    <string name="login">Login</string>-->
@@ -111,4 +112,13 @@
     <!--    <string name="full_name">Full Name</string>-->
     <!--    <string name="username">Username</string>-->
     <!--    <string name="password">Password</string>-->
+    <string name="anxiety_message">Your feelings of anxiety are valid, and it\'s brave of you to acknowledge what you\'re experiencing. Please consider reaching out to a mental health professional who can provide you with effective coping strategies.</string>
+    <string name="bipolar_message">While managing mood fluctuations can feel overwhelming, remember that you have the strength to navigate through these challenges. Consider consulting with a psychiatrist who can develop a treatment plan that works for you.</string>
+    <string name="depression_message">The weight you\'re carrying is real, and seeking help isn\'t a sign of weakness but a step toward healing. A mental health professional can offer you support and evidence-based treatments.</string>
+    <string name="normal_message">Even when assessment results appear typical, it\'s perfectly okay to seek support for enhancing your mental well-being. Speaking with a professional can provide valuable insights.</string>
+    <string name="personality_disorder_message">Understanding yourself is a journey, and you\'re taking an important step by recognizing your patterns. Working with a specialized therapist can help you develop effective strategies.</string>
+    <string name="stress_message">Your body and mind are telling you something important, and it\'s okay to address the pressure you\'re feeling. A mental health professional can teach you practical management techniques.</string>
+    <string name="suicidal_message">Your life has value and meaning, and there are people who want to support you - you\'re not alone. Please reach out to a mental health professional or crisis hotline immediately.</string>
+    <string name="unknown_condition_message">Whatever you\'re experiencing, your feelings are valid and deserve attention. Consider speaking with a mental health professional who can provide proper guidance.</string>
+    <string name="add_more_note">Please provide more information about how you\'re feeling to receive a more accurate assessment (at least 7 notes).</string>
 </resources>
