--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,7 @@
     <string name="suicidal_message">Your life has value and meaning, and there are people who want to support you - you\'re not alone. Please reach out to a mental health professional or crisis hotline immediately.</string>
     <string name="unknown_condition_message">Whatever you\'re experiencing, your feelings are valid and deserve attention. Consider speaking with a mental health professional who can provide proper guidance.</string>
     <string name="add_more_note">Please provide more information about how you\'re feeling to receive a more accurate assessment (at least 7 notes).</string>
+    <string name="default_web_client_id">1056734232546-iate9qqt2lj4m6la44vohi4odedc8fqg.apps.googleusercontent.com</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="google_sign_in_failed">Google Sign-In failed</string>
 </resources>
