Tested, edited, and updated daily reminder and streak notification features. Updated the view of another page to match with new UI looks. Also upgraded the minimum build api to 26 (Android 8.0). Did some strings value refactor for ChatScreen.kt. (this commit message generated by Mistral AI)

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -11,7 +11,7 @@
     <string name="onboarding_page3_title">Bergabung Komunitas</string>
     <string name="onboarding_page3_description">Terhubung dengan orang lain dalam lingkungan yang aman</string>
 
-    <string name="welcome_back">Selamat Datang Kembali</string>
+    <string name="welcome_back">Selamat Datang</string>
     <string name="create_account">Buat Akun</string>
     <string name="label_name">Nama</string>
     <string name="label_email">Email</string>
@@ -138,4 +138,11 @@
 
     <string name="voice_stop_recording">Hentikan Perekaman</string>
     <string name="voice_start_input">Mulai Input Suara</string>
+
+    <string name="daily_reminder_title">Pengingat Catatan Harian</string>
+    <string name="daily_reminder_content">Saatnya merenung dan menulis catatan harian Anda!</string>
+
+    <string name="your_messages">Pesan Anda</string>
+    <string name="no_messages">Tidak ada pesan</string>
+    <string name="no_messages_desc">Mulai sebuah obrolan, pesan akan muncul disini</string>
 </resources>
