💔 Removed `DailyReminderWorker` and it's related dependencies
✨ Added `NetworkMonitor` to handle network connectivity

📝 Updated `AppNavigation` to use `NetworkAwareContent` with the new `NetworkMonitor` for better handling of offline scenarios

📝 Added new strings for offline title and message

🔧 Updated dependencies to include `androidx-hilt-work`

```
✨ feat(notification/dailyreminder): Remove DailyReminderWorker and related dependencies, add NetworkMonitor and update AppNavigation
📝 refactor(strings): Add offline title and message strings
🔧 dep: Update dependencies to include androidx-hilt-work
```

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -145,4 +145,7 @@
     <string name="your_messages">Pesan Anda</string>
     <string name="no_messages">Tidak ada pesan</string>
     <string name="no_messages_desc">Mulai sebuah obrolan, pesan akan muncul disini</string>
+
+    <string name="offline_title">Tidak Ada Koneksi Internet</string>
+    <string name="offline_message">Anda sedang offline. Beberapa fitur mungkin tidak tersedia.</string>
 </resources>
