--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,4 +145,7 @@
     <string name="your_messages">Your Messages</string>
     <string name="no_messages">No messages yet</string>
     <string name="no_messages_desc">When you start a conversation, it will appear here</string>
+
+    <string name="offline_title">No Internet Connection</string>
+    <string name="offline_message">You are currently offline. Some features may not be available.</string>
 </resources>
