📊 Refactor: - Replace `UserData` id from `Int` to `String` in `AuthResponse.kt` and related files. - Add new strings for 'No notes available' and 'When you add a new note, it will appear here' in `strings.xml`. - Add `EmptyState` composable to display message when no notes or messages are available. - Add new string for 'No messages available' in `strings.xml`. - Update `EmptyState` in `ChatScreen.kt` to use new `EmptyState` composable. - Update `EmptyState` in `DashboardScreen.kt` to use new `EmptyState` composable. - Update `EmptyState` in `NoteScreen.kt` to use new `EmptyState` composable. - Add new `EmptyState` composable in `ProfileScreen.kt`. - Update strings in `EmptyState.kt`. - Add `EmptyState` composable for messages in `ChatScreen.kt`. - Update strings in `strings.xml`. - Update strings in `DashboardScreen.kt`. - Update strings in `NoteScreen.kt`. - Update strings in `ProfileScreen.kt`. - Add EmptyState in ChatScreen.xml and NoteScreen.xml.

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -84,7 +84,10 @@
     <string name="update_email_confirmation_message_2">" Yakin ingin melanjutkan?"</string>
     <string name="creating_note">Membuat catatan baru…</string>
     <string name="updating_note">Memperbarui catatan…</string>
+
     <string name="no_notes">Tidak ada catatan</string>
+    <string name="no_notes_desc">Ketika Anda menambahkan catatan baru, catatan tersebut akan muncul di sini</string>
+
     <string name="forgot_password">Lupa kata sandi?</string>
     <string name="error_password_match">Kata sandi tidak cocok</string>
     <string name="update_password_success">Kata sandi berhasil diperbarui!</string>
