--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,10 @@
     <string name="update_email_confirmation_message_2">" Are you sure you want to continue?"</string>
     <string name="creating_note">Creating new note…</string>
     <string name="updating_note">Updating your note…</string>
+
     <string name="no_notes">No notes available</string>
+    <string name="no_notes_desc">When you add a new note, it will appear here</string>
+
     <string name="forgot_password">Forgot password?</string>
     <string name="error_password_match">Password not match</string>
     <string name="update_password_success">Your password updated successfully!</string>
