🚀 Add Custom Permissions Dialog:
* strings.xml: `[📝](app/src/main/res/values-in/strings.xml): Add permission related strings`
* DetailNoteScreen.kt: `[🔧](app/src/main/java/com/c242_ps246/mentalq/ui/main/note/detail/DetailNoteScreen.kt): Implement permission handling`
* CustomDialog.kt: `[📝](app/src/main/java/com/c242_ps246/mentalq/ui/component/CustomDialog.kt): Add confirm and dismiss button text properties`
* strings.xml: `[📝](app/src/main/res/values/strings.xml): Add permission related strings`

This commit adds permission related strings for audio recording and notification, and implements permission handling in DetailNoteScreen.kt using a CustomDialog component. Additionally, the CustomDialog component is modified to accept confirm and dismiss button text properties.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,12 @@
 
     <string name="offline_title">No Internet Connection</string>
     <string name="offline_message">You are currently offline. Some features may not be available.</string>
+
+    <string name="permission_required">Permission Required</string>
+    <string name="audio_permission_rationale">Audio recording permission is needed for this feature to work properly. Please grant the permission request.</string>
+    <string name="audio_permission_settings">MentalQ needs microphone access to convert your voice to text. Please grant permission in settings.</string>
+    <string name="notification_permission_rationale">Notification permission is needed for this feature to work properly. Please grant the permission request.</string>
+    <string name="notification_permission_settings">MentalQ needs notification access to send you reminder notifications. Please grant permission in settings.</string>
+    <string name="try_again">Try Again</string>
+    <string name="open_settings">Open</string>
 </resources>
