--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -151,4 +151,12 @@
 
     <string name="offline_title">Tidak Ada Koneksi Internet</string>
     <string name="offline_message">Anda sedang offline. Beberapa fitur mungkin tidak tersedia.</string>
+
+    <string name="permission_required">Izin Diperlukan</string>
+    <string name="audio_permission_rationale">Izin merekam audio diperlukan agar fitur ini dapat berfungsi dengan baik. Harap berikan izin yang diminta.</string>
+    <string name="audio_permission_settings">MentalQ membutuhkan akses mikrofon untuk mengubah suara Anda menjadi teks. Harap berikan izin di pengaturan.</string>
+    <string name="notification_permission_rationale">Izin notifikasi diperlukan agar fitur ini dapat berfungsi dengan baik. Harap berikan izin yang diminta.</string>
+    <string name="notification_permission_settings">MentalQ membutuhkan akses notifikasi untuk mengirimkan pengingat kepada Anda. Harap berikan izin di pengaturan.</string>
+    <string name="try_again">Coba Lagi</string>
+    <string name="open_settings">Buka</string>
 </resources>
