"Add back button functionality in PsychologistScreen and ChatRoomScreen, update UI state in ChatViewModel, and fix some issues in MidtransScreen"
This commit message summarizes the changes made to the code based on the output of 'git diff --staged'. The changes include adding a back button functionality in PsychologistScreen and ChatRoomScreen, updating the UI state in ChatViewModel, and fixing some issues in MidtransScreen. The commit message follows the conventional commit message format, which includes a short summary of the changes followed by a longer, more detailed explanation if necessary. The commit message also includes an issue number if one is available from the branch name. In this case, there is no issue number provided in the branch name, so the commit message does not include one.

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -161,4 +161,7 @@
     <string name="open_settings">Buka</string>
     <string name="transaction_failed">Transaksi Dibatalkan</string>
     <string name="transaction_failed_desc">Transaksi telah berhasil dibatalkan</string>
+    <string name="you_chat">Anda</string>
+    <string name="end_session">Akhiri Sesi</string>
+    <string name="end_session_message">Anda yakin akan mengakhiri sesi ini?</string>
 </resources>
