🔧 `remove`: Removed ChatApiService, ChatDao, ChatRepository, and related dependencies in the project. 🔧 `remove`: Removed related strings in `app/src/main/res/values-in/strings.xml` and `app/src/main/res/values/strings.xml`. 🔧 `remove`: Removed related functions and dependencies in `AppModule.kt`. 🔧 `remove`: Removed related files in `app/src/main/java/com/c242_ps246/mentalq/data/remote/retrofit/` and `app/src/main/java/com/c242_ps246/mentalq/ui/main/chat/`. 🔧 `remove`: Removed related code in `ChatViewModel.kt` and `ChatRoomViewModel.kt`. 🔧 `remove`: Removed related classes in `com.c242_ps246.mentalq.data.remote.response.ChatResponse.kt` and `com.c242_ps246.mentalq.data.remote.response.ChatMessageResponse.kt`. 🔧 `remove`: Removed related functions in `PsychologistScreen.kt` and `ChatViewModel.kt`. 🔧 `remove`: Removed related functions and dependencies in `ChatApiService.kt`, `ChatDao.kt`, `ChatRepository.kt`, and `ChatRoomViewModel.kt`. 🔧 `remove`: Removed related code in `DashboardScreen.kt`. 🔧 `remove`: Removed related functions in `MentalQDatabase.kt`.
This commit removes the Chat feature from the project. The related classes, functions, and dependencies have been removed.

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -35,7 +35,7 @@
     <string name="hide_password">Sembunyikan kata sandi</string>
 
     <string name="hello_user">Hai, </string>
-    <string name="diary_streak">Streak Catatan</string>
+    <string name="diary_streak">Streak</string>
     <string name="day_wed">Rab</string>
     <string name="current_state">Kondisi Saat Ini</string>
     <string name="state_anxiety">Kecemasan</string>
@@ -164,4 +164,8 @@
     <string name="you_chat">Anda</string>
     <string name="end_session">Akhiri Sesi</string>
     <string name="end_session_message">Anda yakin akan mengakhiri sesi ini?</string>
+    <string name="psychologist_list">Psikolog</string>
+    <string name="no_psychologist_found">Tidak Ada Psikolog Ditemukan.</string>
+    <string name="no_psychologist_found_subtitle">Silakan coba lagi nanti.</string>
+    <string name="chat_with_psychologist">Chat dengan Psikolog</string>
 </resources>
