🗑️ Remove: `.idea/deploymentTargetSelector.xml`, `Add`: `strings.xml`, `DashboardScreen.kt`
Changes in `strings.xml`:
- Add new string: `no_data_disclaimer`

Changes in `DashboardScreen.kt`:
- Update UI state to handle loading state
- Update data disclaimer message based on analysis size
- Add clickable functionality to update predicted status mode
- Show loading indicator when loading data
- Update UI to handle null values in `predictedStatusMode` and `analysisSize`
- Update string resources to use `R.string` instead of hardcoded string literals

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,4 +168,5 @@
     <string name="no_psychologist_found">No Psychologist Found.</string>
     <string name="no_psychologist_found_subtitle">Please try again later.</string>
     <string name="chat_with_psychologist">Chat with Psychologist</string>
+    <string name="no_data_disclaimer">Please add note. If you already added it, tap to refresh.</string>
 </resources>
