--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -168,4 +168,5 @@
     <string name="no_psychologist_found">Tidak Ada Psikolog Ditemukan.</string>
     <string name="no_psychologist_found_subtitle">Silakan coba lagi nanti.</string>
     <string name="chat_with_psychologist">Chat dengan Psikolog</string>
+    <string name="no_data_disclaimer">Silakan tambahkan catatan. Jika sudah ditambahkan, ketuk untuk memperbarui.</string>
 </resources>
