--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="onboarding_next">Next</string>
     <string name="onboarding_get_started">Get Started</string>
     <string name="onboarding_page1_title">Track Your Mood</string>
-    <string name="onboarding_page1_description">Monitor your daily emotional well-being with our intuitive tracking system</string>
+    <string name="onboarding_page1_description">Monitor your daily mental health well-being with our intuitive tracking system</string>
     <string name="onboarding_page2_title">Get Insights</string>
     <string name="onboarding_page2_description">Understand your patterns and receive personalized recommendations</string>
     <string name="onboarding_page3_title">Join Community</string>
