feat: Update API endpoint, add "Not Available" string, and disable Google sign-in
-   Updated the API endpoint in `build.gradle.kts` to `https://mentalq-backend.vercel.app/api/`.
-   Added a new string resource "not_available" in `strings.xml` and `strings.xml (in)` for unavailable features.
-   Disabled the Google sign-in button in `AuthScreen.kt` by setting `enabled` to `false` and adding "(Not Available)" text to the button.
- Updated the title and subtitle message when chat room is empty in ChatScreen.kt

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -174,4 +174,5 @@
     <string name="prediction_disclaimer_or">atau</string>
     <string name="prediction_disclaimer_bold_2">mencerminkan kondisi kesehatan mental</string>
     <string name="prediction_disclaimer_consult">. Konsultasikan dengan profesional untuk saran.</string>
+    <string name="not_available">(Tidak Tersedia)</string>
 </resources>
