--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,4 +175,6 @@
     <string name="prediction_disclaimer_bold_2">reflect mental health</string>
     <string name="prediction_disclaimer_consult">. Consult a professional for advice</string>
     <string name="not_available">(Not Available)</string>
+    <string name="default_web_client_id">1056734232546-9btt30pq6ieiv05gs95o9aoo06ei2nri.apps.googleusercontent.com</string>
+    <string name="confirm_password">Repeat your new password</string>
 </resources>
